# python_gitlab

./: .env  README.md  backend.dockerfile  celery_worker.dockerfile  docker-compose-prod.yml  docker-compose.yml  gunicorn_conf.py  pyproject.toml  sonar-project.properties
.github/workflows/: main.yml  main1.yml
app/: main.py
app/api/: routes.py
app/api/endpoints/: crud_generic.py  events.py  sandbox.py  tasks.py  user.py  websocket.py
app/celery/: celery.py  celeryconfig.py  clickhouse.py  tasks.py
app/core/: config.py  context.py  deps.py  enums.py  logging.py
app/core/enum/: __init__.py  bhashini_tasks.py  channel.py  embedding_model_provider.py  file_type.py  ingestion_type.py  language.py  llm_provider.py  notification_status.py  notification_type.py  role.py  status.py  tts_gender.py
app/db/: events.py  session.py
app/db/models/: __init__.py  audit_log.py  base.py  notification_queue.py  notification_template.py  organization.py  password_reset.py  refresh_token.py  role.py  user.py
app/db/services/: __init__.py  crud_base.py  crud_notification_queue.py  crud_notification_template.py  crud_organization.py  crud_role.py  crud_token.py  crud_user.py  password_reset.py
app/decorators/: __init__.py  rbac_validator.py
app/exceptions/: __init__.py  application_exception.py  entity_not_found_exception.py  exception_handler.py
app/middleware/: __init__.py  instrumentation.py  request_logger.py
app/notification/email/: __init__.py  email_provider.py  mailjet_provider.py
app/schema/: events.py  login.py  notification_queue.py  notification_template.py  organization.py  pydantic_base.py  response.py  role.py  task.py  token.py  user.py
app/utils/: __init__.py  auth.py  clickhouse_client.py  email.py  jinja.py  message_codes.py  notification.py  websocket_handler.py
config/clickhouse/: init.sh  users.xml
config/prometheus/: prometheus.yml
migrations/: env.py
migrations/versions/: 52e4cfdf1b90_add_temp_password_field_to_user_model.py
python_gitlab/fastapi-template-main/: README.md
scripts/: install-pgvector.sh  start-server.sh  start-worker.sh
tests/: conftest.py  test_main.py
